test/corpus/device_io.txt
================================================================
RMAP instruction
================================================================

RMAP r4 d5 r5

---

(source_file
  (statement
    (instruction
      opcode: (opcode)
      operand: (reference
        (register_literal
          (register)))
      operand: (device_no_network
        (device_literal
          (device)))
      operand: (hashish
        (integerish
          (reference
            (register_literal
              (register))))))))

================================================================
L instruction
================================================================

L r11 d1:0 r12

---

(source_file
  (statement
    (instruction
      opcode: (opcode)
      operand: (reference
        (register_literal
          (register)))
      operand: (device_any
        (network_endpoint
          device: (device)))
      operand: (logic_type
        (integerish
          (reference
            (register_literal
              (register))))))))

================================================================
LD instruction
================================================================

LD r13 r14 LogicType.Setting

---

(source_file
  (statement
    (instruction
      opcode: (opcode)
      operand: (reference
        (register_literal
          (register)))
      operand: (device_reference
        (integerish
          (reference
            (register_literal
              (register)))))
      operand: (logic_type
        (integerish
          (integer_literal
            (enum)))))))

================================================================
LR instruction
================================================================

LR r15 d5 Recipe 1

---

(source_file
  (statement
    (instruction
      opcode: (opcode)
      operand: (reference
        (register_literal
          (register)))
      operand: (device_no_network
        (device_literal
          (device)))
      operand: (reagent_mode
        (integerish
          (integer_literal
            (enum))))
      operand: (hashish
        (integerish
          (integer_literal
            (integer)))))))

================================================================
LS instruction
================================================================

LS r0 d0 2 LogicSlotType.Pressure

---

(source_file
  (statement
    (instruction
      opcode: (opcode)
      operand: (reference
        (register_literal
          (register)))
      operand: (device_no_network
        (device_literal
          (device)))
      operand: (slot_index
        (integerish
          (integer_literal
            (integer))))
      operand: (logic_slot_type
        (integerish
          (integer_literal
            (enum)))))))

================================================================
S instruction
================================================================

S d2:2 r1 r2

---
